--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,4 +1,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/apfckevin/FastCatBooking/
-    - /bin/cp -r * $DEPLOYPATH
+    - /bin/rsync -av --exclude='.git' ./ $DEPLOYPATH
