--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,32 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.3",
+        "ezyang/htmlpurifier": "^4.18",
+        "guzzlehttp/guzzle": "^7.10",
         "laravel/framework": "^12.0",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.2",
+        "laravel/telescope": "^5.11",
+        "laravel/tinker": "^2.10",
+        "league/fractal": "^0.20.2",
+        "maatwebsite/excel": "^1.1",
+        "matthewbdaly/laravel-azure-storage": "^2.0",
+        "php-ffmpeg/php-ffmpeg": "^1.3",
+        "spatie/laravel-activitylog": "^4.10",
+        "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23",
+        "fakerphp/faker": "^1.24",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
-        "laravel/sail": "^1.41",
+        "laravel/sail": "^1.45",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
+        "nicolaslopezj/searchable": "1.*",
+        "nunomaduro/collision": "^8.8",
         "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-laravel": "^3.2"
+        "pestphp/pest-plugin-laravel": "^3.2",
+        "phpunit/phpunit": "^11.5",
+        "spatie/laravel-ignition": "^2.9"
     },
     "autoload": {
         "psr-4": {
