--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/dbal": "^4.3",
         "ezyang/htmlpurifier": "^4.18",
         "guzzlehttp/guzzle": "^7.10",
+        "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/telescope": "^5.11",
